ai-proxy-vnet/deploy_dev/envoy.yaml
# File generated by hgctl. Modify as required.

admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                scheme_header_transformation:
                  scheme_to_overwrite: https
                stat_prefix: ingress_http
                # Output envoy logs to stdout
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                # Modify as required
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            path: "/v1/messages"
                          route:
                            cluster: claude_test
                            timeout: 300s
                        - match:
                            prefix: "/"
                          route:
                            cluster: openai_test
                            timeout: 300s
                http_filters:
                  - name: ai-proxy
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          name: ai-proxy
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: /etc/envoy/plugin.wasm
                          configuration:
                            "@type": "type.googleapis.com/google.protobuf.StringValue"
                            value: |
                              {
                                "activeProviderId": "claude_test",
                                "providers": [
                                  {
                                    "id": "openai_test",
                                    "type": "openai",
                                    "domain": "61.49.53.5:30002",
                                    "apiTokens": [
                                      ""
                                    ],
                                    "timeout": 1200000,
                                    "modelMapping": {
                                      "*": "DeepSeek-V3.2"
                                    }
                                  },
                                  {
                                    "id": "claude_test",
                                    "type": "generic",
                                    "protocol": "original",
                                    "genericHost": "220.181.114.184",
                                    "apiTokens": [
                                      "tk-OvOx9M2qhHxYHcO8SQJdAkFVHVnf1tUD"
                                    ],
                                    "timeout": 1200000
                                  }
                                ]
                              }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: openai_test
      connect_timeout: 30s
      type: STATIC
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: openai_test
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 61.49.53.5
                      port_value: 30002
    - name: claude_test
      connect_timeout: 30s
      type: STATIC
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: claude_test
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 220.181.114.184
                      port_value: 30951
